Fix GUI wrapping on: * Tags * Description
Added minimum on:
* Grid Pane

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -384,6 +384,7 @@
 }
 
 #tags .label {
+    -fx-wrap-text: true;
     -fx-text-fill: white;
     -fx-background-color: #3e7b91;
     -fx-padding: 1 3 1 3;
