--- a/src/main/resources/view/PersonListCard.css
+++ b/src/main/resources/view/PersonListCard.css
@@ -22,3 +22,10 @@
     -fx-border-width: 1;
     -fx-border-color: lime green;
 }
+
+#description {
+    -fx-wrap-text: true;
+    -fx-padding: 2 2 2 2;
+    -fx-border-width: 1;
+    -fx-border-color: lime green;
+}
